--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+  workflow_dispatch:
 jobs:
   build:
 
@@ -22,5 +22,35 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Compile
+      run: mvn clean install
+
+    - name: Package
+      run: mvn package
+      
+    - name: Unit Test
+      run: mvn test
+      
+    - name: build & SonarQube analysis
+      run: |
+        mvn verify sonar:sonar -Dsonar.projectKey=testrepo1 -Dsonar.login=4c4e9b9c168315a700a1b32a90e04f61931a75ec -Dsonar.host.url=https://sonarcloud.io/
+        sleep 60 
+        
+    - name: renaming-the-jar-and-backing-up-the-jar 
+      run: |
+        mkdir -p /opt/backup
+        mv target/my-app-1.0-SNAPSHOT.jar target/1.0.${BUILD_NUMBER}.jar
+        cp target/java-jar.${BUILD_NUMBER}.jar /opt/backup/
+        echo Deployment Done
+        
+
+
+
+
+
+
+
+
+
+
+
