--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,6 +31,14 @@ jobs:
     - name: Unit Test
       run: mvn test
       
+    - name: List current directory
+      run: ls -la
+      
+    - name: target folder content
+      run: |
+        cd target
+        ls -la
+      
     - name: build & SonarQube analysis
       run: |
         mvn verify sonar:sonar -Dsonar.projectKey=testrepo1 -Dsonar.login=4c4e9b9c168315a700a1b32a90e04f61931a75ec -Dsonar.host.url=https://sonarcloud.io/
@@ -40,7 +48,7 @@ jobs:
       run: |
         mkdir -p /opt/backup
         mv target/my-app-1.0-SNAPSHOT.jar target/1.0.${BUILD_NUMBER}.jar
-        cp target/java-jar.${BUILD_NUMBER}.jar /opt/backup/
+        cp target/1.0.${BUILD_NUMBER}.jar /opt/backup/
         echo Deployment Done
         
 
