--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,7 +41,7 @@ jobs:
       
     - name: build & SonarQube analysis
       run: |
-        mvn verify sonar:sonar -Dsonar.projectKey=testrepo1 -Dsonar.host.url=https://sonarcloud.io/
+        mvn verify sonar:sonar -Dsonar.projectKey=testrepo1 -Dsonar.login=4c4e9b9c168315a700a1b32a90e04f61931a75ec -Dsonar.host.url=https://sonarcloud.io/
         sleep 60 
         
     - name: renaming-the-jar-and-backing-up-the-jar 
