--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -55,7 +55,7 @@ jobs:
       with:
         args: --acl public-read
       env:
-       FILE: ./1.0.${BUILD_NUMBER}.jar
+       FILE: /opt/backup/1.0.${BUILD_NUMBER}.jar
        AWS_REGION: 'ap-south-1'
        S3_BUCKET: github-action1
        AWS_ACCESS_KEY_ID: AKIA5F24TNBK3HMM555K
