--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -55,11 +55,11 @@ jobs:
       with:
         args: --acl public-read
       env:
-       FILE: /opt/backup/1.0.${BUILD_NUMBER}.jar
+       FILE: target/1.0.${BUILD_NUMBER}.jar
        AWS_REGION: 'ap-south-1'
-       S3_BUCKET: github-action1
-       AWS_ACCESS_KEY_ID: AKIA5F24TNBK3HMM555K
-       AWS_SECRET_ACCESS_KEY: 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    
+       S3_BUCKET: 'github-action1'
+       AWS_ACCESS_KEY_ID: 'AKIA5F24TNBK3HMM555K'
+       AWS_SECRET_ACCESS_KEY: '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'    
         
         
 
