--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,20 +44,12 @@ jobs:
         mvn verify sonar:sonar -Dsonar.projectKey=testrepo1 -Dsonar.login=4c4e9b9c168315a700a1b32a90e04f61931a75ec -Dsonar.host.url=https://sonarcloud.io/
         sleep 60 
         
-    - name: renaming-the-jar-and-backing-up-the-jar 
-      run: |
-        mkdir -p /opt/backup
-        mv target/my-app-1.0-SNAPSHOT.jar target/1.0.${BUILD_NUMBER}.jar
-        cp target/1.0.${BUILD_NUMBER}.jar /opt/backup/
-        cd /opt/backup/
-        ls -la
-  
     - name: Upload file to bucket
       uses: zdurham/s3-upload-github-action@master
       with:
         args: --acl public-read
       env:
-       FILE: target/1.0.${BUILD_NUMBER}.jar
+       FILE: target/my-app-1.0-SNAPSHOT.jar
        AWS_REGION: 'ap-south-1'
        S3_BUCKET: 'github-action1'
        AWS_ACCESS_KEY_ID: 'AKIA5F24TNBK3HMM555K'
